# interesting-coherent-dialogue

./: .gitignore  .gitmodules  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  requirements_genks.txt  requirements_spi.txt
configs/genks/: origin.yaml  ours.yaml
configs/prompts/: dbd_task.txt  trivia_scoring.txt
configs/spi/: origin.yaml  ours.yaml
evaluation/: __init__.py  compare_results.py  g_eval.py  meep.py  run_evaluation.py
evaluation/prompts/geval/: coherence.txt  fluency.txt  informativeness.txt  interestingness.txt
evaluation/prompts/meep/: engagingness.txt
scripts/: run_llm_evaluation.sh  setup_data.sh
scripts/genks/: evaluate.py  inference.py
scripts/genks/data_preparation/: process_wizard.py
scripts/spi/: inference.py
scripts/spi/data_preparation/: process_wizard.py
src/genks/: __init__.py  data_loader.py  inference.py  utils.py
src/methods/: __init__.py  breakdown_detector.py  confidence_classifier.py  trivia_reranker.py  trivia_scorer.py
src/spi/: __init__.py  data_loader.py  data_preparation.py  inference.py  utils.py
src/utils/: __init__.py  config.py  evaluation.py
